// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TikTok Video Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-194r89g-TikTokVideoBlockWrapper e1wv6cj81"
  >
    <iframe
      allow="encrypted-media;"
      allowfullscreen=""
      class="css-130pd85-TikTokVideoBlockPlayer e1wv6cj80"
      src="https://www.tiktok.com/embed/v2/6718335390845095173"
      title="Embedded TikTok Video"
    />
  </div>
</DocumentFragment>
`;

exports[`TikTok Video Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-194r89g-TikTokVideoBlockWrapper e1wv6cj81"
  >
    <iframe
      allow="encrypted-media;"
      allowfullscreen=""
      class="css-130pd85-TikTokVideoBlockPlayer e1wv6cj80"
      src="https://www.tiktok.com/embed/v2/6718335390845095173"
      title="Embedded TikTok Video"
    />
  </div>
</DocumentFragment>
`;
